added basic header and it's content

--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
 </head>
 
 <body>
-  About
-  Discover
-  Get Started
+  <header>
+    <div class="navbar">
+      <div class="logo">
+        <img src="./images/logo-mastercraft.svg" alt="">
+      </div>
+      <nav>
+        <a href="#">About</a>
+        <a href="#">Discover</a>
+        <a href="#">Get Started</a>
+      </nav>
+      <div class="menu-hamburger">
+        <div class="icon-hamburger"></div>
+      </div>
+    </div>
+  </header>
 
   Mastercraft Bamboo Monitor Riser
   A beautiful & handcrafted monitor stand to reduce neck and eye strain.
