mobile and desktop version // no modal

--- a/index.html
+++ b/index.html
@@ -35,23 +35,25 @@
       <p>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</p>
       <div class="first-container-btns">
         <button class="btn back-this-project-btn">Back this project</button>
-        <button class="btn-bookmark"><img src="./images/icon-bookmark.svg" alt=""></button>
+        <button class="btn-bookmark"></button>
       </div>
     </section>
     <section class="progress-container">
-      <div class="total-backed">
-        <h1>$89,914</h1>
-        <p>of $100,000 backed</p>
-      </div>
-      <hr>
-      <div class="total-backers">
-        <h1>5,007</h1>
-        <p>total backers</p>
-      </div>
-      <hr>
-      <div class="days-left">
-        <h1>56</h1>
-        <p>days left</p>
+      <div class="progress-data">
+        <div class="total-backed">
+          <h1>$89,914</h1>
+          <p>of $100,000 backed</p>
+        </div>
+        <hr>
+        <div class="total-backers">
+          <h1>5,007</h1>
+          <p>total backers</p>
+        </div>
+        <hr>
+        <div class="days-left">
+          <h1>56</h1>
+          <p>days left</p>
+        </div>
       </div>
       <progress value="89.9" max="100"></progress>
     </section>
