--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
           member list. Shipping is included.
         </p>
-        <p class="number-left"><span class="number-of-offerts-left">64</span>left</p>
+        <p class="number-left"><span class="number-of-offerts-left"><span class="number-of-offerts-left">64</span></span>left</p>
         <button class="btn">Select Reward</button>
       </div>
       <div class="about-offer out-of-stock">
@@ -100,61 +100,98 @@
       </div>
     </section>
   </main>
-
   <!-- Selection modal start -->
+  <div class="bg-modal-wrapper hide">
+    <div class="modal-container">
+      <div class="heading-icon">
+        <h2>Back this project</h2>
+        <img src="./images/icon-close-modal.svg" alt="">
+      </div>
+      <p>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
+      <div class="about-offer">
+        <h3>Pledge with no reward</h3>
+        <p>
+          Choose to support us without a reward if you simply believe in our project. As a backer,
+          you will be signed up to receive product updates via email.
+        </p>
+        <div class="pladge-container">
+          <p>Enter your pledge</p>
+          <div class="pladge-button">
+            <div class="input-box"><input type="number" value="1" min="1"></div>
+            <button class="btn">Continue</button>
+          </div>
+        </div>
+      </div>
+      <div class="about-offer">
+        <h3>Bamboo Stand</h3>
+        <span class="price">Pledge $25 or more</span>
+        <p>
+          You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
+          you’ll be added to a special Backer member list.
+        </p>
+        <p class="number-left"><span class="number-of-offerts-left">101</span> left</p>
+        <!-- Selected pledge start -->
+        <div class="pladge-container">
+          <p>Enter your pledge</p>
+          <div class="pladge-button">
+            <div class="input-box"><input type="number" value="25" min="25"></div>
+            <button class="btn">Continue</button>
+          </div>
+        </div>
+      </div>
+      <!-- Selected pledge end -->
+      <div class="about-offer">
+        <h3>Black Edition Stand</h3>
+        <span class="price">Pledge $75 or more</span>
+        <p>
+          You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
+          member list. Shipping is included.
+        </p>
+        <p class="number-left"><span class="number-of-offerts-left">64</span> left</p>
+        <!-- Selected pledge start -->
+        <div class="pladge-container">
+          <p>Enter your pledge</p>
+          <div class="pladge-button">
+            <div class="input-box"><input type="number" value="75" min="75"></div>
+            <button class="btn">Continue</button>
+          </div>
+        </div>
+      </div>
+      <!-- Selected pledge end -->
+      <div class="about-offer out-of-stock">
+        <h3>Mahogany Special Edition</h3>
+        <span class="price">Pledge $200 or more</span>
+        <p>
+          You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
+          to our Backer member list. Shipping is included.
+        </p>
+        <p class="number-left"><span class="number-of-offerts-left">0</span> left</p>
+        <!-- Selected pledge  start -->
+        <div class="pladge-container">
+          <p>Enter your pledge</p>
+          <div class="pladge-button">
+            <div class="input-box"><input type="number" value="200" min="200"></div>
+            <button class="btn">Continue</button>
+          </div>
+        </div>
+      </div>
+      <!-- Selected pledge end -->
+      <!-- Selection modal end -->
+    </div>
+  </div>
 
-  Back this project
-  Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
-
-  Pledge with no reward
-  Choose to support us without a reward if you simply believe in our project. As a backer, 
-  you will be signed up to receive product updates via email.
-
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-  you’ll be added to a special Backer member list.
-  101 left
-
-  <!-- Selected pledge start -->
-  Enter your pledge
-  $25
-  Continue
-  <!-- Selected pledge end -->
-
-  Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-  member list. Shipping is included.
-  64 left
-
-  <!-- Selected pledge start -->
-  Enter your pledge
-  $75
-  Continue
-  <!-- Selected pledge end -->
-
-  Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-  to our Backer member list. Shipping is included.
-  0 left
-
-  <!-- Selected pledge  start -->
-  Enter your pledge
-  $200
-  Continue
-  <!-- Selected pledge end -->
-
-  <!-- Selection modal end -->
-
-  <!-- Success modal start -->
-
-  Thanks for your support!
-  Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
-  an email once our campaign is completed.
-  Got it!
-
-  <!-- Success modal end -->
+  <div class="bg-modal-wrapper hide">
+    <!-- Success modal start -->
+    <div class="modal-container modal-success">
+      <img src="./images/icon-check.svg" alt="">
+      <h2>Thanks for your support!</h2>
+      <p>
+        Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
+        an email once our campaign is completed.
+      </p>
+      <button class="btn">Got it!</button>
+    </div>
+    <!-- Success modal end -->
+  </div>
 </body>
 </html>
