--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <section class="progress-container">
       <div class="progress-data">
         <div class="total-backed">
-          <h1>$89,914</h1>
+          <h1>$55,358</h1>
           <p>of $100,000 backed</p>
         </div>
         <hr>
         <div class="total-backers">
-          <h1>5,007</h1>
+          <h1>1,022</h1>
           <p>total backers</p>
         </div>
         <hr>
@@ -55,7 +55,7 @@
           <p>days left</p>
         </div>
       </div>
-      <progress value="89.9" max="100"></progress>
+      <progress value="55.3" max="100"></progress>
     </section>
     <section class="about-container">
       <h2>About this project</h2>
@@ -68,30 +68,30 @@
         Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer
         to allow notepads, pens, and USB sticks to be stored under the stand.
       </p>
-      <div class="about-offer">
+      <div class="about-offer about-offer-desktop">
         <h3>Bamboo Stand</h3>
         <span class="price">Pledge $25 or more</span>
-        <p>
+        <p class="bamboo-stand">
           You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
           you’ll be added to a special Backer member list.
         </p>
         <p class="number-left"><span class="number-of-offerts-left">101</span> left</p>
         <button class="btn">Select Reward</button>
       </div>
-      <div class="about-offer">
+      <div class="about-offer about-offer-desktop">
         <h3>Black Edition Stand</h3>
         <span class="price">Pledge $75 or more</span>
-        <p>
+        <p class="black-edition-stand">
           You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
           member list. Shipping is included.
         </p>
-        <p class="number-left"><span class="number-of-offerts-left"><span class="number-of-offerts-left">64</span></span>left</p>
+        <p class="number-left"><span class="number-of-offerts-left">64</span>left</p>
         <button class="btn">Select Reward</button>
       </div>
-      <div class="about-offer out-of-stock">
+      <div class="about-offer about-offer-desktop out-of-stock">
         <h3>Mahogany Special Edition</h3>
         <span class="price">Pledge $200 or more</span>
-        <p>
+        <p class="mahogany-special-edition">
           You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
           to our Backer member list. Shipping is included.
         </p>
@@ -101,75 +101,95 @@
     </section>
   </main>
   <!-- Selection modal start -->
-  <div class="bg-modal-wrapper hide">
+  <div class="bg-modal-wrapper modal-selection hide">
     <div class="modal-container">
       <div class="heading-icon">
         <h2>Back this project</h2>
-        <img src="./images/icon-close-modal.svg" alt="">
+        <img src="./images/icon-close-modal.svg" class="close-modal" alt="">
       </div>
       <p>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
-      <div class="about-offer">
-        <h3>Pledge with no reward</h3>
-        <p>
-          Choose to support us without a reward if you simply believe in our project. As a backer,
-          you will be signed up to receive product updates via email.
-        </p>
-        <div class="pladge-container">
+      <div class="about-offer pledge">
+        <div class="modal-choice-offer">
+          <input type="radio" id="no-reward" name="modal-radio" class="pledge-input">
+          <label for="no-reward">
+            <h3>Pledge with no reward</h3>
+          </label>
+          <p>
+            Choose to support us without a reward if you simply believe in our project. As a backer,
+            you will be signed up to receive product updates via email.
+          </p>
+        </div>
+        <div class="pledge-container">
           <p>Enter your pledge</p>
-          <div class="pladge-button">
+          <form class="pledge-button">
             <div class="input-box"><input type="number" value="1" min="1"></div>
             <button class="btn">Continue</button>
-          </div>
+          </form>
         </div>
       </div>
-      <div class="about-offer">
-        <h3>Bamboo Stand</h3>
-        <span class="price">Pledge $25 or more</span>
-        <p>
-          You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-          you’ll be added to a special Backer member list.
-        </p>
-        <p class="number-left"><span class="number-of-offerts-left">101</span> left</p>
+      <div class="about-offer pledge bamboo-stand">
+        <div class="modal-choice-offer">
+          <input type="radio" id="bamboo" name="modal-radio" class="pledge-input">
+          <label for="bamboo">
+            <h3>Bamboo Stand</h3>
+          </label>
+          <span class="price">Pledge $25 or more</span>
+          <p>
+            You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
+            you’ll be added to a special Backer member list.
+          </p>
+          <p class="number-left"><span class="number-of-offerts-left">101</span> left</p>
+        </div>
         <!-- Selected pledge start -->
-        <div class="pladge-container">
+        <div class="pledge-container">
           <p>Enter your pledge</p>
-          <div class="pladge-button">
+          <div class="pledge-button">
             <div class="input-box"><input type="number" value="25" min="25"></div>
             <button class="btn">Continue</button>
           </div>
         </div>
       </div>
       <!-- Selected pledge end -->
-      <div class="about-offer">
-        <h3>Black Edition Stand</h3>
-        <span class="price">Pledge $75 or more</span>
-        <p>
-          You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-          member list. Shipping is included.
-        </p>
-        <p class="number-left"><span class="number-of-offerts-left">64</span> left</p>
+      <div class="about-offer pledge black-edition-stand">
+        <div class="modal-choice-offer">
+          <input type="radio" id="black" name="modal-radio" class="pledge-input">
+          <label for="black">
+            <h3>Black Edition Stand</h3>
+          </label>
+          <span class="price">Pledge $75 or more</span>
+          <p>
+            You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
+            member list. Shipping is included.
+          </p>
+          <p class="number-left"><span class="number-of-offerts-left">64</span> left</p>
+        </div>
         <!-- Selected pledge start -->
-        <div class="pladge-container">
+        <div class="pledge-container">
           <p>Enter your pledge</p>
-          <div class="pladge-button">
+          <div class="pledge-button">
             <div class="input-box"><input type="number" value="75" min="75"></div>
             <button class="btn">Continue</button>
           </div>
         </div>
       </div>
       <!-- Selected pledge end -->
-      <div class="about-offer out-of-stock">
-        <h3>Mahogany Special Edition</h3>
-        <span class="price">Pledge $200 or more</span>
-        <p>
-          You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-          to our Backer member list. Shipping is included.
-        </p>
-        <p class="number-left"><span class="number-of-offerts-left">0</span> left</p>
+      <div class="about-offer out-of-stock pledge mahogany-special-edition">
+        <div class="modal-choice-offer">
+          <input type="radio" id="mahogany" name="modal-radio" class="pledge-input">
+          <label for="mahogany">
+            <h3>Mahogany Special Edition</h3>
+          </label>
+          <span class="price">Pledge $200 or more</span>
+          <p>
+            You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
+            to our Backer member list. Shipping is included.
+          </p>
+          <p class="number-left"><span class="number-of-offerts-left">0</span> left</p>
+        </div>
         <!-- Selected pledge  start -->
-        <div class="pladge-container">
+        <div class="pledge-container">
           <p>Enter your pledge</p>
-          <div class="pladge-button">
+          <div class="pledge-button">
             <div class="input-box"><input type="number" value="200" min="200"></div>
             <button class="btn">Continue</button>
           </div>
@@ -180,7 +200,7 @@
     </div>
   </div>
 
-  <div class="bg-modal-wrapper hide">
+  <div class="bg-modal-wrapper success hide">
     <!-- Success modal start -->
     <div class="modal-container modal-success">
       <img src="./images/icon-check.svg" alt="">
@@ -189,7 +209,7 @@
         Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
         an email once our campaign is completed.
       </p>
-      <button class="btn">Got it!</button>
+      <button class="btn success-btn">Got it!</button>
     </div>
     <!-- Success modal end -->
   </div>
